<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_black"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/bazaarLogo3"
        android:layout_width="@dimen/bazaar_logo_width"
        android:layout_height="@dimen/bazaar_logo_height"
        android:layout_marginTop="@dimen/bazaar_logo_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bazaar_logo" />

    <ImageView
        android:id="@+id/forgotPasswordForm"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginStart="@dimen/form_margin_left"
        android:layout_marginTop="@dimen/form_margin_top"
        android:layout_marginEnd="@dimen/form_margin_right"
        android:background="@color/form_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bazaarLogo3" />

    <TextView
        android:id="@+id/forgotPasswordTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/register_text_margin_start"
        android:layout_marginTop="@dimen/register_input_margin_top"
        android:text="@string/forgot_password_text_2"
        android:textColor="@color/white"
        android:textSize="@dimen/register_text_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id = "@+id/weWillSendAnEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/hint_color"
        android:layout_marginStart="@dimen/register_text_input_margin_start"
        android:layout_marginEnd="@dimen/register_text_input_margin_end"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView2"
        android:layout_marginTop="@dimen/we_will_send_an_email_text_view_margin_top"
        android:text="@string/we_will_send_an_email_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout3"
        android:layout_width="match_parent"
        style="@style/registerTextInputLayoutStyle"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/register_username_layout_margin_top"
        android:layout_marginStart="@dimen/register_text_input_margin_start"
        android:layout_marginEnd="@dimen/register_text_input_margin_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/weWillSendAnEmailTextView"
        app:layout_constraintTop_toBottomOf="@+id/weWillSendAnEmailTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText3"
            style="@style/registerEditTextStyle"
            android:layout_width="match_parent"
            android:hint="@string/email_hint_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/emailMeButton"
        style="@style/roundedButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
        android:layout_marginStart="@dimen/register_text_input_margin_start"
        android:layout_marginEnd="@dimen/register_text_input_margin_end"
        android:text="@string/email_me_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>