<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_black">

        <ImageView
            android:id="@+id/bazaarLogo"
            android:layout_width="@dimen/bazaar_logo_width"
            android:layout_height="@dimen/bazaar_logo_height"
            android:layout_marginTop="@dimen/bazaar_logo_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bazaar_logo" />

        <ImageView
            android:id="@+id/registerForm"
            android:layout_width="match_parent"
            android:layout_height="510dp"
            android:layout_marginStart="@dimen/form_margin_left"
            android:layout_marginTop="@dimen/form_margin_top"
            android:layout_marginEnd="@dimen/form_margin_right"
            android:background="@color/form_background_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bazaarLogo" />

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/register_text_margin_start"
            android:layout_marginTop="@dimen/register_input_margin_top"
            android:text="@string/register_text"
            android:textColor="@color/white"
            android:textSize="@dimen/register_text_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextInputLayout"
            style="@style/registerTextInputLayoutStyle"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/register_text_input_margin_start"
            android:layout_marginTop="@dimen/register_username_layout_margin_top"
            android:layout_marginEnd="@dimen/register_text_input_margin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                style="@style/registerEditTextStyle"
                android:layout_width="match_parent"
                android:hint="@string/username_hint_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            style="@style/registerTextInputLayoutStyle"
            app:errorEnabled="true"
            android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
            android:layout_marginStart="@dimen/register_text_input_margin_start"
            android:layout_marginEnd="@dimen/register_text_input_margin_end"
            app:layout_constraintEnd_toEndOf="@+id/usernameTextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/usernameTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                style="@style/registerEditTextStyle"
                android:layout_width="match_parent"
                android:hint="@string/email_hint_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            style="@style/registerTextInputLayoutStyle"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
            android:layout_marginStart="@dimen/register_text_input_margin_start"
            android:layout_marginEnd="@dimen/register_text_input_margin_end"
            app:layout_constraintEnd_toEndOf="@+id/emailTextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/emailTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/registerEditTextStyle"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:hint="@string/password_hint_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            style="@style/roundedButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
            android:layout_marginStart="@dimen/register_text_input_margin_start"
            android:layout_marginEnd="@dimen/register_text_input_margin_end"
            android:text="@string/register_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

        <TextView
            android:id="@+id/alreadyHaveAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/registerButton"
            app:layout_constraintTop_toBottomOf="@+id/registerButton"
            android:layout_marginTop="@dimen/already_have_account_margin_top"
            android:layout_marginStart="@dimen/already_have_account_margin_start"
            android:text="@string/already_have_account_text"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_text"
            android:textColor="@color/register_button_color"
            android:layout_marginStart="@dimen/log_in_text_margin_start"
            android:paddingBottom="@dimen/log_in_text_padding_bottom"
            app:layout_constraintStart_toEndOf="@+id/alreadyHaveAccountTextView"
            app:layout_constraintTop_toTopOf="@+id/alreadyHaveAccountTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>